# tidal-song-collection-extractor

./: LICENSE  README.md  main.py  pyproject.toml
src/tidal_extractor/: __init__.py  auth.py  cli.py  collector.py  core.py  formatter.py
tests/: __init__.py  test_auth.py  test_collector.py  test_core.py  test_formatter.py  test_formatter_csv.py
