[project]
name = "tidal-mgmt-suite"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fioreale", email = "alefio96@gmail.com" }
]
dependencies = [
    "tidalapi>=0.8.3",
    "rich>=14.0.0",
    "click>=8.1.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tidal_extractor"]
