[project]
name = "tidal-mgmt-suite"
version = "0.1.0"
description = "A Python CLI tool to manage and export your Tidal music collection"
authors = [
    { name = "Alessio Fiorentino", email = "alefio96@gmail.com" }
]
dependencies = [
    "tidalapi>=0.8.3",
    "rich>=14.0.0",
    "click>=8.1.8",
    "questionary>=2.0.0",
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tidal_extractor"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
